--- a/www/styles/style.css
+++ b/www/styles/style.css
@@ -2981,3 +2981,121 @@ grid-row-end: -1;
 
 
   /* FIM SECÇÃO SOLUÇÃO À MEDIDA */
+/* Início SECÇÃO O QUE PODE GANHAR COM ESTA SOLUÇÃO */
+.hr_separate_accordion_gains{
+    width: 150px;
+    height: 10px;
+    background: #ED1C23;
+    border-radius: 2px;
+    margin-top: 0%;
+    margin-bottom: 54px;
+  }
+  #solution_gains{
+    background: #F5F5F5;
+    padding-bottom: 5%;
+  }
+  
+  #solution_gains_text{
+    font-family: Ubuntu;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 49px;
+    line-height: 56px;
+    color: #212121;
+    text-align: center;
+  }
+  
+  .solution_gains_class{
+    margin-top: 5%;
+    display: flex;
+    justify-content: space-between;
+    margin-right:11%;
+    margin-left: 11%;
+    text-align: center;
+  }
+  .solution_gains_sub{
+    background: #FFFFFF;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.03), 0px 2px 1px rgba(0, 0, 0, 0.05), 0px 1px 3px rgba(0, 0, 0, 0.08);
+    width:32%;
+  }
+  
+  .solution_gains_sub_title{
+    font-family: Ubuntu;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+    letter-spacing: 0.15px;
+    color: #252B42;
+    text-align: left;
+    margin-left: 11%;
+    margin-right: 11%;
+  }
+  
+  .svg_gains{
+    display: flex;
+    margin-top: 8%;
+    margin-left:11%;
+    margin-bottom: 5%;
+  }
+  
+  .solution_gains_sub_text{
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.5px;
+    color: #737373;
+    text-align: left;
+    margin-left: 11%;
+    margin-right: 11%;
+    margin-bottom: 30px;
+  }
+  
+  /* tablet*/
+  @media only screen and (max-width: 992px) {
+    #solution_gains_text{
+    font-family: Ubuntu;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 49px;
+    line-height: 56px;
+    text-align: center;
+    margin-left: 15%;
+    margin-right: 15%;
+    }
+  }
+  
+  /*Mobile*/
+  @media only screen and (max-width: 775px) {
+    .solution_gains_class{
+      flex-direction: column;
+      justify-content: space-evenly;
+      margin-right: 2%;
+      margin-left: 2%;
+      text-align:center;
+    }
+  
+    .solution_gains_sub{
+      width:100%;
+      margin-bottom: 15px;
+    }
+    .solution_gains_sub_title{
+      text-align: center;
+    }
+  
+    .solution_gains_sub_title{
+      text-align: center;
+    }
+  
+    .svg_gains{
+      margin-left: auto;
+      margin-right: auto;
+      text-align: center;
+    }
+  }
+  
+  
+  
+  /* FIM SECÇÃO O QUE PODE GANHAR COM ESTA SOLUÇÃO */
