--- a/www/styles/style.css
+++ b/www/styles/style.css
@@ -2996,12 +2996,12 @@ grid-row-end: -1;
     margin-top: 0%;
     margin-bottom: 54px;
   }
-  #solution_gains{
+  .solution_gains{
     background: #F5F5F5;
     padding-bottom: 5%;
   }
   
-  #solution_gains_text{
+  .solution_gains_text{
     font-family: Ubuntu;
     font-style: normal;
     font-weight: normal;
@@ -3061,7 +3061,7 @@ grid-row-end: -1;
   
   /* tablet*/
   @media only screen and (max-width: 992px) {
-    #solution_gains_text{
+    .solution_gains_text{
     font-family: Ubuntu;
     font-style: normal;
     font-weight: normal;
@@ -3105,3 +3105,123 @@ grid-row-end: -1;
   
   
   /* FIM SECÇÃO O QUE PODE GANHAR COM ESTA SOLUÇÃO */
+
+  /* INÍCIO SECÇÃO CONTROLO E PLANEAMENTO */
+.control_and_planning{
+    background: #212121;
+}
+
+.control_and_planning_title{
+    font-family: Ubuntu;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 61px;
+    line-height: 72px;
+    text-align: center;
+    letter-spacing: -0.5px;
+    color: #FFFFFF;
+    margin-right: 18%;
+    margin-left: 18%;
+    margin-bottom: 73px;
+    padding-top: 40px;
+}
+
+
+.control_and_planning_text{
+    font-family: Ubuntu;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 61px;
+    line-height: 72px;
+    text-align: center;
+    letter-spacing: -0.5px;
+    color: #FFFFFF;
+    width: 50%;
+}
+.control_and_planning_img{
+    width: 50%;
+}
+.control_and_planning_img img{
+    width: 632px;
+    height: auto;
+    margin-left: 34%;
+}
+
+.control_and_planning_text_title{
+    font-family: Ubuntu;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 35px;
+    line-height: 36px;
+    letter-spacing: 0.25px;
+    color: #FFFFFF;
+    text-align: left;
+}
+
+.control_and_planning_text_content{
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 26px;
+    font-feature-settings: 'salt' on, 'liga' off;
+    color: #FFFFFF;
+    text-align: left;
+}
+
+.control_and_planning_content{
+    display: flex;
+    margin-left: 11%;
+    margin-right: 11%;
+}
+
+/* tablet */
+@media only screen and (max-width: 1334px){
+    .control_and_planning_img img{
+        margin-left: 11%;
+    }
+}
+
+@media only screen and (max-width: 1100px){
+    .control_and_planning_img img{
+        margin-left: 5%;
+    }
+}
+
+@media only screen and (max-width: 992px){
+    .control_and_planning_content{
+        flex-direction: column-reverse;
+        justify-content: center;
+    }
+    .control_and_planning_text{
+        width: 100%;
+        padding-bottom: 40px;
+    }
+
+    .control_and_planing_text_items p{
+        text-align: center;
+        margin-right: 10%;
+        margin-left: 10%;
+    }
+
+    .control_and_planning_title{
+        font-size: 49px;
+       line-height: 56px;
+       margin-right: 10%;
+       margin-left: 10%;
+    }
+}
+
+
+@media only screen and (max-width: 550px){
+    .control_and_planning_img img{
+        width: 415px;
+    }
+
+    .control_and_planning_title{
+        font-size: 35px;
+        line-height: 36px;
+    }
+
+}
+  /* FIM SECÇÃO CONTROLO E PLANEAMENTO */
